--- a/abc.html
+++ b/abc.html
@@ -1,2 +1,10 @@
-html 
-如果不是html，php之类的文件是上传不了的
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	sdfsdfsdfsdf
+</body>
+</html>
